--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "sotsial",
-	"version": "0.1.0",
+	"version": "0.1.1",
+	"license": "MIT",
 	"main": "./dist/index.js",
 	"devDependencies": {
 		"@types/bun": "latest",
