--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sotsial",
-	"version": "0.1.12",
+	"version": "0.2.0",
 	"license": "MIT",
 	"main": "./dist/index.js",
 	"devDependencies": {
@@ -26,7 +26,8 @@
 	"files": ["dist"],
 	"scripts": {
 		"bundle": "rm -rf dist && tsc && tsc-alias",
-		"prepublishOnly": "bun bundle"
+		"prepublishOnly": "bun bundle",
+		"format": "bun x @biomejs/biome format --write ./"
 	},
 	"type": "module",
 	"types": "./dist/index.d.ts"
