--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 			"@/*": ["src/*"]
 		},
 		"declaration": true,
-		"declarationMap": true,
+		"declarationMap": false,
 		"sourceMap": false,
 		"outDir": "./dist",
 		"strict": true,
