--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sotsial",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"license": "MIT",
 	"main": "./dist/index.js",
 	"devDependencies": {
@@ -27,7 +27,8 @@
 	"scripts": {
 		"bundle": "rm -rf dist && tsc && tsc-alias",
 		"prepublishOnly": "bun bundle",
-		"format": "bun x @biomejs/biome format --write ./"
+		"format": "bun x @biomejs/biome format --write ./",
+		"test": "bun test"
 	},
 	"type": "module",
 	"types": "./dist/index.d.ts"
