--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sotsial",
-	"version": "0.2.3",
+	"version": "0.3.0-beta.1",
 	"license": "MIT",
 	"main": "./dist/index.js",
 	"devDependencies": {
