--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sotsial",
-	"version": "0.3.0-beta.9",
+	"version": "0.3.0-beta.10",
 	"license": "MIT",
 	"main": "./dist/index.js",
 	"devDependencies": {
@@ -32,5 +32,9 @@
 		"pkg-version": "node -p \"require('./package.json').version\""
 	},
 	"type": "module",
-	"types": "./dist/index.d.ts"
+	"types": "./dist/index.d.ts",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/arsenstorm/sotsial.git"
+	}
 }
