--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,13 +25,18 @@ jobs:
       - name: Check version change
         id: check_version
         run: |
+          # Store current commit hash
+          CURRENT_COMMIT=$(git rev-parse HEAD)
+          
           # Get current version
           CURRENT_VERSION=$(bun run pkg-version)
           
           # Get previous version from the last commit
           git checkout HEAD~1
           PREVIOUS_VERSION=$(bun run pkg-version)
-          git checkout HEAD
+          
+          # Return to original commit explicitly
+          git checkout $CURRENT_COMMIT
           
           # Compare versions
           if [ "$CURRENT_VERSION" != "$PREVIOUS_VERSION" ]; then
