--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,10 +53,8 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Create .npmrc file with both registries
+          # Create .npmrc file
           echo "//registry.npmjs.org/:_authToken=\${NPM_TOKEN}" > .npmrc
-          echo "@${GITHUB_REPOSITORY_OWNER}:registry=https://npm.pkg.github.com" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=\${GITHUB_TOKEN}" >> .npmrc
           
           # Get version from package.json
           TAG=$(bun run pkg-version)
@@ -64,12 +62,10 @@ jobs:
           # Check if it's a beta version
           if [[ $TAG =~ ^[0-9]+\.[0-9]+\.[0-9]+-beta\.[0-9]+$ ]]; then
             echo "Publishing beta version $TAG"
-            bunx npm publish --provenance --tag beta --registry https://registry.npmjs.org/ --access public
-            bunx npm publish --provenance --tag beta --registry https://npm.pkg.github.com --access public
+            bunx npm publish --provenance --tag beta
           else
             echo "Publishing production version $TAG"
-            bunx npm publish --provenance --tag latest --registry https://registry.npmjs.org/ --access public
-            bunx npm publish --provenance --tag latest --registry https://npm.pkg.github.com --access public
+            bunx npm publish --provenance --tag latest
           fi
           
           # Clean up .npmrc file
