--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "sotsial-project",
 	"type": "module",
+	"license": "SEE LICENSE IN LICENSE",
 	"private": true,
 	"scripts": {
 		"dev": "turbo dev",
