--- a/packages/sotsial/package.json
+++ b/packages/sotsial/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "sotsial",
-	"version": "0.3.1-beta.3",
+	"version": "0.3.1",
 	"license": "MIT",
 	"main": "./dist/index.js",
 	"devDependencies": {
